--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
+      <groupId>junit</groupId>上对方说的
       <artifactId>junit</artifactId>
       <version>4.10</version>
       <scope>test</scope>
